[package]
name = "cargo_update_checker"
version = "0.1.0"
authors = ["Senthil Kumar <senthil.vijay.kumar@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.5"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
futures = "0.3.1"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
derive = "1.0.0"
semver = { version = "0.9.0", features = ["serde"] }
tokio = "0.2.0-alpha.6"