[package]
name = "cargo_update_checker"
version = "0.1.0"
authors = ["Senthil Kumar <senthil.vijay.kumar@gmail.com>"]
edition = "2018"

[dependencies]
toml = "0.5.7"
surf = "2.1.0"
futures = "0.3.8"
serde_derive = "1.0.117"
serde = "1.0.117"
serde_json = "1.0.59"
derive = "1.0.0"
version-compare = "0.0.11"
tokio = { version =  "0.3.3", features = ["rt-multi-thread", "macros"] }